fix: resolve RTL layout issues in LESS

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -28,6 +28,10 @@
         min-height: 0;
         * {
             box-sizing: border-box;
+
+            [dir='rtl'] & {
+                text-align: right;
+            }
         }
         @media(min-width:800px) {
             #cp-sidebarlayout-leftside {
@@ -250,6 +254,10 @@
                     display: block;
                     color: @cp_sidebar-hint;
                     margin-bottom: @sidebar_base-margin;
+
+                    [dir='rtl'] & {
+                        text-align: right;
+                    }
                     p {
                         margin-bottom: 0;
                     }
